fix(router-outlet): spacing fixes

--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,3 +1,3 @@
 .router-outlet--wrapper {
-  margin: 2rem 20%;
+  margin: 2rem 20vw;
 }
